--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,10 @@
 @import "tailwindcss";
+@plugin "daisyui";
+
+@theme {
+  --color-mint-500: oklch(0.72 0.11 178);
+}
 
 body{
   background-color: #000;
-}
-h1 {
-  color: #fff;
 }
